--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     // 5) Cargar capas (MVP: 1 o 2)
     Promise.all([
-      addGeoJsonLayer("Capa 1", "./data/capa1.geojson"),
+      addGeoJsonLayer("Capa 1", "./data/hex_index_access.geojson"),
       // addGeoJsonLayer("Capa 2", "./data/capa2.geojson"),
     ]).then(() => {
       // 6) Control de capas
@@ -94,3 +94,4 @@
   </script>
 </body>
 </html>
+
