--- a/index.html
+++ b/index.html
@@ -3,73 +3,94 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MVP mapa</title>
+  <title>MVP Mapa - Accesibilidad</title>
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  />
 
   <style>
-function lerp(a, b, t) {
-  return a + (b - a) * t;
-}
+    html, body { height: 100%; margin: 0; }
+    #map { height: 100vh; width: 100vw; }
 
-// rojo -> amarillo -> verde continuo
-function getColor(v) {
-  if (v == null) return "#ccc";
-
-  const min = 0;
-  const max = 9.5; // ajustable
-  const t = Math.max(0, Math.min(1, (v - min) / (max - min)));
-
-  // gradiente rojo -> verde pasando por amarillo
-  const r = Math.round(lerp(220, 34, t));
-  const g = Math.round(lerp(50, 139, t));
-  const b = Math.round(lerp(47, 34, t));
-
-  return `rgb(${r},${g},${b})`;
-}
-
-function style(feature) {
-  const v = feature.properties.acc_index;
-  return {
-    weight: 0,
-    fillOpacity: 0.85,
-    fillColor: getColor(v)
-  };
-}
-
-fetch("./data/hex_index_access.geojson")
-  .then(r => r.json())
-  .then(data => {
-    const layer = L.geoJSON(data, { style }).addTo(map);
-    map.fitBounds(layer.getBounds(), { padding: [20, 20] });
-  });
-
+    /* opcional: la caja de layers un poco más usable */
+    .leaflet-control-layers { max-height: 60vh; overflow: auto; }
   </style>
 </head>
+
 <body>
   <div id="map"></div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
   <script>
-    const map = L.map("map").setView([-32.95, -60.66], 12);
+    // --- Basemaps (estética dashboard)
+    const baseLight = L.tileLayer(
+      "https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png",
+      { maxZoom: 20, attribution: "&copy; OpenStreetMap &copy; CARTO" }
+    );
 
-    L.tileLayer("https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png", {
-      maxZoom: 20,
-      attribution: "&copy; OpenStreetMap &copy; CARTO"
-    }).addTo(map);
+    const baseDark = L.tileLayer(
+      "https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png",
+      { maxZoom: 20, attribution: "&copy; OpenStreetMap &copy; CARTO" }
+    );
+
+    // --- Mapa
+    const map = L.map("map", { layers: [baseLight] })
+      .setView([-32.95, -60.66], 12);
+
+    // --- Color rojo -> verde según acc_index (0 a ~9.5)
+    function lerp(a, b, t) {
+      return a + (b - a) * t;
+    }
+
+    function getColor(v) {
+      if (v == null || Number.isNaN(v)) return "#cccccc";
+
+      const min = 0;
+      const max = 9.5; // si querés lo ajustamos según tu dataset real
+      const t = Math.max(0, Math.min(1, (v - min) / (max - min)));
+
+      // gradiente rojo -> verde (suave)
+      const r = Math.round(lerp(220, 34, t));
+      const g = Math.round(lerp(50, 139, t));
+      const b = Math.round(lerp(47, 34, t));
+
+      return `rgb(${r},${g},${b})`;
+    }
+
+    function style(feature) {
+      const vRaw = feature?.properties?.acc_index;
+      const v = (vRaw === null || vRaw === undefined) ? null : Number(vRaw);
+
+      return {
+        weight: 0,          // sin borde (más limpio para hex)
+        fillOpacity: 0.85,
+        fillColor: getColor(v)
+      };
+    }
+
+    // --- Cargar GeoJSON
+    const overlays = {};
 
     fetch("./data/hex_index_access.geojson")
       .then(r => {
-        if (!r.ok) throw new Error(`HTTP ${r.status} al cargar el GeoJSON`);
+        if (!r.ok) throw new Error(`HTTP ${r.status} cargando GeoJSON`);
         return r.json();
       })
       .then(data => {
-        const layer = L.geoJSON(data, {
-          style: { weight: 1, opacity: 0.8, fillOpacity: 0.35 }
-        }).addTo(map);
+        const hexLayer = L.geoJSON(data, { style }).addTo(map);
+        overlays["Accesibilidad (hex)"] = hexLayer;
 
-        try { map.fitBounds(layer.getBounds(), { padding: [20, 20] }); } catch(e) {}
+        // encuadrar
+        try {
+          map.fitBounds(hexLayer.getBounds(), { padding: [20, 20] });
+        } catch (e) {}
+
+        // control de capas (base + overlay)
+        const baseMaps = { "Claro": baseLight, "Oscuro": baseDark };
+        L.control.layers(baseMaps, overlays, { collapsed: false }).addTo(map);
       })
       .catch(err => {
         console.error(err);
@@ -78,4 +99,3 @@ fetch("./data/hex_index_access.geojson")
   </script>
 </body>
 </html>
-
