--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MVP Mapa - Accesibilidad modulada por población</title>
+  <title>MVP Mapa - Accesibilidad + Población + EPV</title>
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
   <style>
     html, body { height: 100%; margin: 0; }
     #map { height: 100vh; width: 100vw; }
-    .leaflet-control-layers { max-height: 60vh; overflow: auto; }
+    .leaflet-control-layers { max-height: 65vh; overflow: auto; }
 
     .legend {
       background: white;
@@ -37,15 +37,20 @@
     // =========================
     const ACCESS_URL = "./data/hex_index_access.geojson";
     const POP_URL    = "./data/hex_index_pop.geojson";
+    const EPV_URL    = "./data/epv.geojson"; // <-- CAMBIAR si tu archivo se llama distinto
 
-    const JOIN_KEY  = "id";        // <-- la opción más fácil: ambos tienen "id"
+    // Join entre access y pop
+    const JOIN_KEY  = "id";
     const ACC_FIELD = "acc_index";
     const POP_FIELD = "pop_hex";
+
+    // EPV
+    const EPV_GRADE_FIELD = "tabla_EPV_S_GRADO_CALIDAD";
 
     // Intensidad por población
     const NEUTRAL = "#f3f3f3";
     const BASE_OPACITY = 0.90;
-    const GAMMA = 1.25; // >1: medios más lavados | <1: medios más marcados
+    const GAMMA = 1.25;
 
     // =========================
     // Basemaps
@@ -64,31 +69,20 @@
       .setView([-32.95, -60.66], 12);
 
     // =========================
-    // Utilidades
+    // Utils
     // =========================
     function lerp(a, b, t) { return a + (b - a) * t; }
 
     function hexToRgb(hex) {
       const h = hex.replace("#", "");
-      return {
-        r: parseInt(h.slice(0,2), 16),
-        g: parseInt(h.slice(2,4), 16),
-        b: parseInt(h.slice(4,6), 16)
-      };
+      return { r: parseInt(h.slice(0,2), 16), g: parseInt(h.slice(2,4), 16), b: parseInt(h.slice(4,6), 16) };
     }
 
-    function rgbToCss({r,g,b}) {
-      return `rgb(${Math.round(r)},${Math.round(g)},${Math.round(b)})`;
-    }
+    function rgbToCss({r,g,b}) { return `rgb(${Math.round(r)},${Math.round(g)},${Math.round(b)})`; }
 
     function mixHex(c1, c2, t) {
-      const a = hexToRgb(c1);
-      const b = hexToRgb(c2);
-      return rgbToCss({
-        r: lerp(a.r, b.r, t),
-        g: lerp(a.g, b.g, t),
-        b: lerp(a.b, b.b, t),
-      });
+      const a = hexToRgb(c1), b = hexToRgb(c2);
+      return rgbToCss({ r: lerp(a.r, b.r, t), g: lerp(a.g, b.g, t), b: lerp(a.b, b.b, t) });
     }
 
     function quantileBreaks(values, k) {
@@ -102,9 +96,7 @@
     }
 
     function classIndex(x, breaks) {
-      for (let i = 0; i < breaks.length; i++) {
-        if (x <= breaks[i]) return i;
-      }
+      for (let i = 0; i < breaks.length; i++) if (x <= breaks[i]) return i;
       return breaks.length;
     }
 
@@ -116,11 +108,8 @@
     function toNumber(v) {
       if (v == null) return NaN;
       if (typeof v === "number") return v;
-      // por si viene "1.234" o "1,234" o "1234,56"
       const s = String(v).trim().replace(/\s/g, "");
-      // si tiene coma y no tiene punto, asumimos decimal con coma
       if (s.includes(",") && !s.includes(".")) return Number(s.replace(",", "."));
-      // si tiene ambos, asumimos separador miles con punto y decimal coma -> "1.234,56"
       if (s.includes(",") && s.includes(".")) return Number(s.replace(/\./g, "").replace(",", "."));
       return Number(s);
     }
@@ -152,8 +141,7 @@
             </div>`;
           prev = to;
         }
-
-        div.innerHTML += `<div class="muted">10 clases (como QGIS). Población modula saturación/opacidad.</div>`;
+        div.innerHTML += `<div class="muted">10 clases. Población modula saturación/opacidad.</div>`;
         return div;
       };
       legend.addTo(map);
@@ -161,17 +149,18 @@
     }
 
     // =========================
-    // Carga y render
+    // Render
     // =========================
     const overlays = {};
 
     Promise.all([
       fetch(ACCESS_URL).then(r => { if(!r.ok) throw new Error(`HTTP ${r.status} ${ACCESS_URL}`); return r.json(); }),
       fetch(POP_URL).then(r => { if(!r.ok) throw new Error(`HTTP ${r.status} ${POP_URL}`); return r.json(); }),
+      fetch(EPV_URL).then(r => { if(!r.ok) throw new Error(`HTTP ${r.status} ${EPV_URL}`); return r.json(); }),
     ])
-    .then(([accData, popData]) => {
+    .then(([accData, popData, epvData]) => {
 
-      // 1) Indexar población por "id"
+      // ---- 1) Población por id
       const popById = new Map();
       const popVals = [];
 
@@ -179,48 +168,39 @@
         const id = f?.properties?.[JOIN_KEY];
         const p  = toNumber(f?.properties?.[POP_FIELD]);
         if (id == null) continue;
-
         if (!Number.isNaN(p)) {
           popById.set(String(id), p);
           popVals.push(p);
         }
       }
+      if (!popVals.length) throw new Error(`No encontré población numérica en properties.${POP_FIELD}`);
 
-      if (!popVals.length) {
-        throw new Error(`No encontré población numérica en properties.${POP_FIELD} dentro de ${POP_URL}`);
-      }
-
-      // 2) Cuantiles de acc_index
+      // ---- 2) Cuantiles de acc_index
       const accVals = [];
       for (const f of accData.features || []) {
         const v = toNumber(f?.properties?.[ACC_FIELD]);
         if (!Number.isNaN(v)) accVals.push(v);
       }
-      if (!accVals.length) {
-        throw new Error(`No encontré valores numéricos en properties.${ACC_FIELD} dentro de ${ACCESS_URL}`);
-      }
+      if (!accVals.length) throw new Error(`No encontré valores numéricos en properties.${ACC_FIELD}`);
 
       const accBreaks = quantileBreaks(accVals, 10);
 
-      // 3) p10..p90 población + log para factor t
+      // ---- 3) Escala población -> t (0..1) con p10..p90 + log
       popVals.sort((a,b)=>a-b);
       const p10 = popVals[Math.floor(popVals.length * 0.10)];
       const p90 = popVals[Math.floor(popVals.length * 0.90)];
 
       function popToT(p) {
         if (p == null || Number.isNaN(p)) return 0;
-
         const lp  = Math.log1p(p);
         const l10 = Math.log1p(p10);
         const l90 = Math.log1p(p90);
-
         let t = (lp - l10) / (l90 - l10);
         t = Math.max(0, Math.min(1, t));
-
         return Math.pow(t, GAMMA);
       }
 
-      // 4) Estilo combinado (acc color * población intensidad)
+      // ---- 4) Capa combinada (acc * población)
       function styleCombined(feature) {
         const id  = String(feature?.properties?.[JOIN_KEY] ?? "");
         const acc = toNumber(feature?.properties?.[ACC_FIELD]);
@@ -241,15 +221,45 @@
         };
       }
 
-      const layer = L.geoJSON(accData, { style: styleCombined }).addTo(map);
-      overlays["Accesibilidad (modulada por población)"] = layer;
+      const layerAccPop = L.geoJSON(accData, { style: styleCombined }).addTo(map);
+      overlays["Acc+Pob (modulado)"] = layerAccPop;
 
-      try { map.fitBounds(layer.getBounds(), { padding: [20, 20] }); } catch(e) {}
+      // ---- 5) EPV por grado de calidad (subcapas)
+      const gradesSet = new Set();
+      for (const f of epvData.features || []) {
+        const g = f?.properties?.[EPV_GRADE_FIELD];
+        gradesSet.add(String(g ?? "Sin dato"));
+      }
+      const grades = Array.from(gradesSet).sort((a,b) => a.localeCompare(b, "es"));
 
+      // estilos EPV
+      function epvStyle() {
+        return { weight: 1.2, opacity: 0.9, fillOpacity: 0.10 };
+      }
+      function epvPointToLayer(feature, latlng) {
+        return L.circleMarker(latlng, { radius: 5, weight: 1.5, opacity: 0.9, fillOpacity: 0.65 });
+      }
+
+      // crea una capa por grade
+      for (const grade of grades) {
+        const sub = L.geoJSON(epvData, {
+          filter: (feature) => String(feature?.properties?.[EPV_GRADE_FIELD] ?? "Sin dato") === grade,
+          style: epvStyle,
+          pointToLayer: epvPointToLayer,
+        });
+        overlays[`EPV: ${grade}`] = sub; // aparece como toggles en el control
+        // (no las agrego por defecto para que no ensucie; si querés que una venga on, la .addTo(map))
+      }
+
+      // ---- Controles
       const baseMaps = { "Claro": baseLight, "Oscuro": baseDark };
       L.control.layers(baseMaps, overlays, { collapsed: false }).addTo(map);
 
       addLegend(accBreaks);
+
+      // encuadre
+      try { map.fitBounds(layerAccPop.getBounds(), { padding: [20, 20] }); } catch(e) {}
+
     })
     .catch(err => {
       console.error(err);
