--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     // =========================
     const ACCESS_URL = "./data/hex_index_access.geojson";
     const POP_URL    = "./data/hex_index_pop.geojson";
-    const EPV_URL    = "./data/epv.geojson"; // <-- CAMBIAR si tu archivo se llama distinto
+    const EPV_URL    = "./data/EPV.geojson"; // <-- CAMBIAR si tu archivo se llama distinto
 
     // Join entre access y pop
     const JOIN_KEY  = "id";
@@ -268,3 +268,4 @@
   </script>
 </body>
 </html>
+
